@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                XML-TreePP
-version:             0.29
+version:             0.31
 abstract:            ~
 license:             perl
 generated_by:        ExtUtils::MakeMaker version 6.36
